# lagbas-manager

./: .env  .gitignore  ANALISE_SEGURANCA.MD  ARTIGO_COMPLETO.MD  Dockerfile  LICENSE  README.MD  TODO.MD  VOICE_ASSISTANT_PLAN.md  agents.md  app.py  bd.md  bd_admin.md  database.md  nixpacks.toml  pyproject.toml  railway.json  readme.md  todo.md  vercel.json
assets/: style.css
backend/: .env  app.py  config.py  requirements.txt
backend/routes/: amostra.py  auth.py  cilindro.py  elemento.py  tempo_chama.py
backend/utils/: decorators.py  supabase.py
database/: DIAGRAM.MD  rls.sql  schema.sql  seed.sql
frontend/: .env  .env.example  app.py  requirements.txt
frontend/blueprints/: admin.py  amostra.py  auth.py  cilindro.py  elemento.py  helpers.py  historico.py  pressao.py  temperatura.py
frontend/pages/: 1_📦_Cilindros.py  2_🧪_Elementos.py  3_📊_Amostras.py  4_🔥_Tempo_Chama.py  5_👥_Usuarios.py
frontend/services/: api_client.py
frontend/static/js/: voice_assistant.js
frontend/templates/: admin.html  admin_user_data.html  amostra.html  base.html  cilindro.html  dashboard.html  elemento.html  historico.html  login.html  perfil.html  pressao.html  register.html  temperatura.html  tempo_chama.html  voice_modal.html
frontend/utils/: constants.py  erros_utils.py  supabase_utils.py  validators.py
latex/: README.MD  artigo.md  artigo.tex
latex/codigo/: permissoes.json
latex/figuras/: arquitetura.mmd  banco_dados.mmd  fluxo_dados.mmd  navegacao.mmd  navegacao_abas.mmd
utils/: __init__.py  auth.py  config.py  database.py  helpers.py
